<resources>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="empty_presets_list">There are no saved presets yet.\nClick add to create one.</string>
    <string name="save">Save</string>
    <string name="set_name">Set name</string>
    <string name="unsaved_save">(*) Save</string>
    <string name="generate">Generate</string>
    <string name="failed_fetch_presets">Failed to fetch presets</string>
    <string name="failed_delete_preset">Failed to delete preset</string>
    <string name="confirm_action">Confirm action</string>
    <string name="are_you_sure_delete_s_preset">Are you sure you want to delete \"%s\" preset?</string>
    <string name="are_you_sure_generate_preset_s">Are you sure you want to start generation from \"%s\" preset?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait</string>
    <string name="generation_results">Generation results</string>
    <string name="generation_error">An unknown error occurred during generation</string>
    <string name="generating_image">Generating image…</string>
    <string name="generating_image_s_from_s">Generating %1$s from %2$s…</string>
    <string name="generated_stats">Successfully generated - %1$s\nFailed to generate - %2$s</string>
    <string name="generator">Generator</string>
    <string name="n_choose_generator">1. Choose generator:</string>
    <string name="effect">Effect</string>
    <string name="color">Color</string>
    <string name="n_choose_color">4. Choose color:</string>
    <string name="n_choose_effect">2. Choose effect:</string>
    <string name="size_count">Size/count</string>
    <string name="n_choose_size_count">3. Choose size/count:</string>
    <string name="quality">Quality</string>
    <string name="n_choose_quality">5. Choose quality:</string>
    <string name="summary">Summary</string>
    <string name="n_summary">6. Summary:</string>
    <string name="configure">Configure</string>
    <string name="new_preset">New preset</string>
    <string name="preset_edit">Edit preset</string>
    <string name="generator_random">RANDOM</string>
    <string name="generator_flat_color">FLAT COLOR</string>
    <string name="generator_colored_pixels">PIXELATION</string>
    <string name="generator_colored_circles">CIRCLES</string>
    <string name="generator_colored_rectangle">RECTANGLES</string>
    <string name="generator_colored_noise">NOISE</string>
    <string name="generator_colored_lines">LINES</string>
    <string name="effect_mirrored">MIRROR</string>
    <string name="effect_threshold">THRESHOLD</string>
    <string name="effect_text_overlay">FILE NAME</string>
    <string name="s_parameters">%s parameters</string>
    <string name="type">Type:</string>
    <string name="orientation">Orientation:</string>
    <string name="random">Random</string>
    <string name="circles_count">Circles count:</string>
    <string name="pixel_multiplier">Pixel multiplier:</string>
    <string name="rectangles_count">Rectangles count:</string>
    <string name="lines_count">Lines count:</string>
    <string name="value_bigger_zero">Value must be greater than zero</string>
    <string name="width">width</string>
    <string name="width_range">Width range:</string>
    <string name="height">height</string>
    <string name="height_range">Height range:</string>
    <string name="count">count</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="step">step</string>
    <string name="from_s_to_s_step_s">from %1$s to %2$s with step %3$s</string>
    <string name="correct_errors">Please correct all errors</string>
    <string name="fixed_size">Fixed size:</string>
    <string name="format">Format:</string>
    <string name="percent_quality">Quality (%):</string>
    <string name="unsaved_preset_name">Unsaved</string>
    <string name="failed_save_preset">Failed to save preset</string>
    <string name="preset_name_empty">Preset name is empty</string>
    <string name="name_s">Name — %s</string>
    <string name="created_s">Created — %s</string>
    <string name="generator_type_s">Generator type — %s</string>
    <string name="generator_info_s">%1$s (%2$s)</string>
    <string name="effect_type_s">Effect type — %s</string>
    <string name="width_s">Width — %s</string>
    <string name="height_s">Height — %s</string>
    <string name="count_s">Count — %s</string>
    <string name="count_s_short">x%s</string>
    <string name="quality_s_percent">Quality — %1$s (%2$s%%)</string>
    <string name="quality_s_percent_short">%1$s (%2$s%%)</string>
    <string name="colors_s_hue">Colors — HUE %1$s-%2$s</string>
    <string name="folder_s">Folder — %s</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="noise_type_1">Lines</string>
    <string name="noise_type_2">Pixelation</string>
    <string name="noise_type_3">Lines (soft)</string>
    <string name="noise_type_4">TV</string>
    <string name="noise_type_5">TV (soft)</string>
    <string name="noise_type_6">Lines + TV</string>
    <string name="s_permission_required">%s permission is required</string>
    <string name="storage_s">/Storage%s</string>
    <string name="preview">Preview</string>
    <string name="saved_into">Saved into:\n%s</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="preview_info">The preview does not take the specified dimensions into account</string>
    <string name="use_light_colors">Use light colors</string>
    <string name="use_dark_colors">Use dark colors</string>
    <string name="grayscale">Grayscale</string>
</resources>
