...
                android:hint="@string/width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/choose_size_and_count_et_height_holder"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_fixed_size_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_width"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_height" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_height_holder"
                android:layout_width="0dp"
...
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_height"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_count" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_count_holder"
                android:layout_width="0dp"
...
                android:hint="@string/from"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/choose_size_and_count_et_height_range_to_holder"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_height_range_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_height_range_from"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_height_range_to" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_height_range_to_holder"
                android:layout_width="0dp"
...
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_height_range_to"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_height_range_step" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_height_range_step_holder"
                android:layout_width="0dp"
...
