...

    <TextView
        style="@style/GenerationStepHeaderText"
        android:text="@string/n_choose_effect" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/choose_effect_fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>
